# frc-2017

./: .classpath  .classpath~  .gitignore  .project  LICENSE  README.md  build.properties~  save.xml  sysProps.xml
src/org/usfirst/frc/team6135/robot/: Drive-DESKTOP-MAN28D6.java  Drive.java  JetsonComm.java  OI.java  Robot-DESKTOP-MAN28D6.java  Robot.java  RobotMap.java
src/org/usfirst/frc/team6135/robot/commands/: AUTOSecondGear.java  AutonomousCommand.java  CenterGearDeposit.java  ClimberBackward.java  DriveDistance.java  DrivePastBaseLine.java  ExampleCommand.java  FarPositionDepositGear.java  Flip-DESKTOP-MAN28D6.java  Flip.java  Flip_tmp.java  NearCollectBall.java  NearPositionDepositGear.java  NearShoot.java  ProcessImages.java  Reverse.java  RotateAngle-DESKTOP-MAN28D6.java  RotateAngle.java  SIOperation.java  TestCommand.java  climberOff.java  climberOn.java  climberOperation.java  debugDriveBackWard.java  driveReverse.java  driveWithJoysticks.java  indexOff.java  indexOperation.java  indexWithSpeed.java  intakeOff.java  intakeOn.java  intakeOperation.java  operateClimber.java  operateIndexer.java  operateIntake.java  operateSI.java  (+14 more)
vision/: README.md
vision/2168_Vision_Example-master/: .cproject  .gitignore
vision/2168_Vision_Example-master/images/2pt_goal_on_floor/: README.txt
vision/2168_Vision_Example-master/src/: CMakeCache.txt  CMakeLists.txt  Hello.c  Makefile  _.txt  __.txt  a.out  main  main.cpp
vision/images/WrongCameraAngle/: README.txt
vision/src/: CMakeCache.txt  CMakeLists.txt  Makefile  Test  Test.cpp  cmake_install.cmake  main.cpp
(+34 files in other folders)
