cmake_minimum_required(VERSION 2.8)
execute_process(COMMAND v4l2-ctl -c exposure_auto=1)
execute_process(COMMAND v4l2-ctl -c exposure_absolute=5)
project( Hello )
find_package( OpenCV REQUIRED )
include_directories (${OpenCV_INCLUDE_DIRS})
include_directories (/home/ubuntu/wpilib-master)
add_executable( Hello Hello.c )
target_link_libraries( Hello ${OpenCV_LIBS} )
